crates/math-core/tests/snapshots/custom_cmd_test__def_unused_arg.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\drop#1{z}\\drop{y}"
---
<math>
    <mi>z</mi>
</math>
