crates/math-core/tests/snapshots/custom_cmd_test__empty_arg_at_stream_end.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\two{a}{}"
---
<math>
    <mi>a</mi>
    <mo>+</mo>
    <mrow></mrow>
</math>
