crates/math-core/tests/snapshots/custom_cmd_test__empty_arg_at_stream_start.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\two{}{b}"
---
<math>
    <mrow></mrow>
    <mo>+</mo>
    <mi>b</mi>
</math>
