crates/math-core/tests/snapshots/custom_cmd_test__empty_only_arg.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\bb{}"
---
<math>
    <mrow></mrow>
</math>
