crates/math-core/tests/snapshots/custom_cmd_test__empty_second_arg.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\odv{y}{}"
---
<math>
    <mfrac>
        <mrow>
            <mrow><mspace/><mi mathvariant="normal">d</mi></mrow>
            <mi>y</mi>
        </mrow>
        <mrow>
            <mrow><mspace/><mi mathvariant="normal">d</mi></mrow>
            <mrow></mrow>
        </mrow>
    </mfrac>
</math>
