crates/math-core/tests/snapshots/custom_cmd_test__forward_reference.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\foo}{x+\\baz}\\newcommand{\\baz}{y}\\foo"
---
<math>
    <mi>x</mi>
    <mo>+</mo>
    <mi>y</mi>
</math>
