crates/math-core/tests/snapshots/custom_cmd_test__forward_reference_across_snippets.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\foo"
---
<math>
    <mi>x</mi>
    <mo>+</mo>
    <mi>y</mi>
</math>
