crates/math-core/tests/snapshots/custom_cmd_test__forward_reference_resolved_at_use.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\foo}{\\baz}\\newcommand{\\baz}{1}\\foo\\renewcommand{\\baz}{2}\\foo"
---
<math>
    <mn>1</mn>
    <mn>2</mn>
</math>
