crates/math-core/tests/snapshots/custom_cmd_test__forward_reference_with_args.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\foo}[1]{\\baz{#1}}\\newcommand{\\baz}[1]{[#1]}\\foo{z}"
---
<math>
    <mo stretchy="false">[</mo>
    <mi>z</mi>
    <mo stretchy="false">]</mo>
</math>
